<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.kelly.mysop.Changepassword">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/changepasswordpic"
        android:layout_alignParentTop="true"
        android:src="@drawable/lb2"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/Originalpassword"
        android:textSize="18dp"
        android:hint="@string/Changepassward_Originalpassword"
        android:singleLine="false"
        android:gravity="center"
        android:layout_below="@+id/changepasswordpic"
        android:layout_marginTop="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/NewPassword"
        android:textSize="18dp"
        android:hint="@string/Changepassward_NewPassword"
        android:gravity="center"
        android:layout_below="@+id/Originalpassword"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp"
        android:layout_alignEnd="@+id/Originalpassword" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/Confirmnewpassward"
        android:hint="@string/Changepassward_Confirmnewpassward"
        android:textSize="18dp"
        android:gravity="center"
        android:focusableInTouchMode="true"
        android:layout_below="@+id/NewPassword"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp"
        android:layout_alignEnd="@+id/NewPassword" />

    <Button
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:text="確認"
        android:id="@+id/submit"
        android:background="#ffff3f2f"
        android:textColor="#ffffff"
        android:textSize="25dp"
        android:onClick="check"
        android:layout_marginTop="60dp"
        android:layout_below="@+id/Confirmnewpassward"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
